Fixed second line of main span subtitles not showing
Second line of main span subtitles would not show on iphone x safari and chrome. I needed to include display: inline-block; inside the main content span css.

--- a/styles.css
+++ b/styles.css
@@ -347,9 +347,12 @@
     #ffd414,
     #ff7a22
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  display: inline-block;
+  /* background-clip: text; */
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
+  /* color: transparent; */
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
 }
